# inferno

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: ci.yml
benchmarks/: results.csv
scripts/: parity.py
src/: check.h  main.cpp
src/loader/: config.cpp  config.h  mmap_file.cpp  mmap_file.h  npy.cpp  npy.h  safetensors.cpp  safetensors.h  test.txt  weights.cpp  weights.h
tests/: test_smoke.cpp
tests/loader/: config.cpp  mmap_file.cpp  npy.cpp  weights.cpp
